--- a/index.html
+++ b/index.html
@@ -504,8 +504,7 @@
             <a href="#" class="links"> <i class="fas fa-phone"></i> +55-48-991857171</a>
             <a href="#" class="links"> <i class="fas fa-envelope"></i> marcosavala236@gmail.com </a>
             <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Santa Cruz, Rua # 327 -La Concordia, Santa Catarina -Brasil</a>
-
-           https://maps.app.goo.gl/YHdh11R3qRQ3vfo56
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7095.821612410485!2d-52.043356108620934!3d-27.221950015301335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e37f98e790bf59%3A0xa410a4d3181fd8cf!2sSanta%20Cruz%2C%20Conc%C3%B3rdia%20-%20SC%2C%2089700-000!5e0!3m2!1spt-BR!2sbr!4v1713015245237!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <div class="box">
